<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_example_controllers</name>
  <version>1.0.0</version>
  <description>franka_example_controllers provides example code for controllingFranka Robotics research robots with ros2_control</description>
  <maintainer email="support@franka.de">Franka Robotics GmbH</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>franka_msgs</depend>
  <depend>franka_semantic_components</depend>
  <depend>pinocchio</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl_vendor</depend>
  <!-- ★ 새로 추가한 TF-Eigen 변환 패키지들 -->
  <depend>tf2_eigen_kdl</depend>
  <depend>tf2_kdl</depend>
  <depend>tf2_eigen</depend>
  
  <test_depend>ament_cmake</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface_testing</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
